--- a/package.json
+++ b/package.json
@@ -114,7 +114,35 @@
     "vscode-regexpp": "^3.1.0",
     "vscode-textmate": "9.2.0",
     "yauzl": "^3.0.0",
-    "yazl": "^2.4.3"
+    "yazl": "^2.4.3",
+    "@huggingface/transformers": "^3.0.0",
+    "@huggingface/inference": "^2.8.0",
+    "ollama": "^0.5.0",
+    "autogpt-core": "^0.2.0",
+    "graphrag": "^0.3.0",
+    "@vercel/ai": "^4.0.0",
+    "langchain": "^0.2.0",
+    "chroma-js": "^2.4.2",
+    "faiss-node": "^0.5.0",
+    "pinecone-client": "^2.0.0",
+    "weaviate-ts-client": "^1.5.0",
+    "redis": "^4.6.0",
+    "mongodb": "^6.0.0",
+    "pg": "^8.11.0",
+    "axios": "^1.6.0",
+    "ws": "^8.14.0",
+    "express": "^4.18.0",
+    "socket.io": "^4.7.0",
+    "dockerode": "^4.0.0",
+    "kubernetes-client": "^9.0.0",
+    "aws-sdk": "^2.1500.0",
+    "google-cloud": "^0.56.0",
+    "azure-storage": "^2.10.7",
+    "stripe": "^14.0.0",
+    "twilio": "^4.19.0",
+    "slack-web-api": "^7.0.0",
+    "discord.js": "^14.14.0",
+    "notion-sdk-js": "^2.2.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.53.2",
